--- a/styles/variables.less
+++ b/styles/variables.less
@@ -149,6 +149,7 @@
 // -------------------------
 // Used for a bird's eye view of components dependent on the z-axis
 // Try to avoid customizing these :)
+@zindexAppBanner:            5;
 @zindexDropdown:          1000;
 @zindexPopover:           1010;
 @zindexTooltip:           1030;
@@ -245,7 +246,9 @@
 
 @texture-linen:             "../img/texture-linen.jpg";
 @texture-wood:              "../img/texture-wood.jpg";
+@texture-wood-banner:       "../img/texture-wood-banner.png";
 @texture-jeans-blue:        "../img/texture-jeans-blue.jpg";
 @texture-jeans-yellow:      "../img/texture-jeans-yellow.jpg";
 @body-gradient:             "../img/body-bg.png";
 @sprite-path:               "../img/sprite.png";
+@cityscape:                 "../img/cityscape.png";
