--- a/components/app/app-tmpl.handlebars
+++ b/components/app/app-tmpl.handlebars
@@ -1,3 +1,10 @@
 <div id="app-header" class="header-navbar"></div>
+
+<div id="app-banner" class="app-banner banner-hide">
+  <h1 class="banner-title">Goodybag</h1>
+  <h2 class="banner-subtext">- Let us help decide your next meal -</h2>
+  <div class="banner-cityscape"></div>
+</div>
+
 <div id="app-modals" class="modals"></div>
 <div id="app-pages"  class="pages container"></div>
