fix fb-button alignment

--- a/modals/register/register-tmpl.handlebars
+++ b/modals/register/register-tmpl.handlebars
@@ -4,7 +4,7 @@
   <h1>Sign Up</h1>
 </div>
 
-<div class="row">
+<div class="row fb-login-wrapper">
   <button class="facebook-login-button" type="button">Connect with Facebook</button>
 </div>
 
