fix error returning in ajax, add in proper error handling to registration

--- a/styles/forms.less
+++ b/styles/forms.less
@@ -696,5 +696,6 @@ legend + .control-group {
 
 // Errors
 input.error {
-  border: 1px solid #FF594A;
+  border: 1px solid #FF8C81;
+  box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
 }
