--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -8,8 +8,12 @@
   width: 322px;
 }
 
-.facebook-login-button {
-  margin-left: 80px;
+.login-modal .fb-login-wrapper {
+  text-align: center;
+}
+
+.login-modal .facebook-login-button {
+  margin-left: 7px;
   line-height: 72px;
   color: white;
   text-shadow: 0 -2px 1px rgba(0,0,0,0.4);
