--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -4,7 +4,7 @@
   <h1>Log In</h1>
 </div>
 
-<div class="row">
+<div class="row fb-login-wrapper">
   <button class="facebook-login-button" type="button">Connect with Facebook</button>
 </div>
 
