link registration to login

--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -44,3 +44,9 @@
     </div>
   </form>
 </div>
+
+<div class="row">
+  <div class="span4 register-wrapper">
+    <a href="#" class="register-link">Click here to register</a>
+  </div>
+</div>
