--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -63,3 +63,12 @@
   display: inline;
   font-size: 16px;
 }
+
+.register-wrapper {
+  text-align: center;
+}
+
+.register-wrapper a {
+  color: #4C4C4C;
+  // text-decoration: underline;
+}
