alleviate possible zindex issues

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -1,3 +1,9 @@
+@import "/styles/variables.less";
+
+.login-modal {
+  z-index: @zindexLoginModal;
+}
+
 .login-modal h1 {
   font-size: 46px;
   line-height: 50px;
