--- a/modals/register/register-style.less
+++ b/modals/register/register-style.less
@@ -1,3 +1,9 @@
+@import "/styles/variables.less";
+
+.register-modal {
+  z-index: @zindexRegisterModal;
+}
+
 .register-modal h1 {
   font-size: 46px;
   line-height: 50px;
