--- a/styles/variables.less
+++ b/styles/variables.less
@@ -155,6 +155,8 @@
 @zindexTooltip:           1030;
 @zindexModalBackdrop:     1040;
 @zindexModal:             1050;
+@zindexLoginModal:        1051;
+@zindexRegisterModal:     1052;
 @zindexFixedNavbar:       1060;
 
 // Dropdowns
