--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -55,7 +55,7 @@
         <i class="icon-chevron-down expansion-indicator"></i>
         <ul class="dropdown-menu">
             <li>
-              <a href="#" class="edit-keytag-link">Connect your Keytag</a>
+              <a href="#" class="edit-keytag-link">Connect Your Keytag</a>
             </li>
             <li>
               <a href="#/my-punchcards">Your PunchCards</a>
