--- a/modals/forgot-password/forgot-password-style.less
+++ b/modals/forgot-password/forgot-password-style.less
@@ -7,11 +7,11 @@
   margin-left: 72px;
 }
 
-.field-email {
+.forgot-password-modal .field-email {
   width: 304px;
 }
 
-.send-email-btn {
+.forgot-password-modal .send-email-btn {
   color: white;
   font-size: 20px;
   font-weight: bold;
