make punchcard group table divs

--- a/pages/punch-cards/punch-cards-style.less
+++ b/pages/punch-cards/punch-cards-style.less
@@ -34,6 +34,12 @@
   box-shadow: 0 1px 6px rgba(0,0,0, 0.36);
 }
 
+.punchcard-group {
+  // Fix in clear issues
+  display: table;
+  width: 100%;
+}
+
 // Group Headers
 // ----------------
 
