added support page.  mosly copy of about-us

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -37,6 +37,9 @@
             <li>
               <a href="#/legal">Legal</a>
             </li>
+            <li>
+              <a href="#/support">Support</a>
+            </li>
             <li class="get-the-app">
               <a href="https://itunes.apple.com/ie/app/goodybag/id506924389?mt=8">Get the App!</a>
             </li>
