--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -171,6 +171,17 @@ input[type="button"] {
   .buttonBackground(@btnInverseBackground, @btnInverseBackgroundHighlight);
 }
 
+.btn-white {
+  background: white;
+  border: 1px solid @gray-light;
+  border-radius: 7px;
+  padding: 11px 12px 9px 12px;
+}
+
+.btn-white:hover {
+  background: #f5f5f5;
+}
+
 
 // Cross-browser Jank
 // --------------------------------------------------
