setup page display mechanics

--- a/pages/card-update/card-update-tmpl.handlebars
+++ b/pages/card-update/card-update-tmpl.handlebars
@@ -2,7 +2,7 @@
 
 <div class="plateau span8 offset1 plateau-page">
   <p>Update your card id.</p>
-  <p>Would you like to change your card id from {{oldCardId}} to {{newCardId}}?</p>
+  <p>Would you like to change your card id from <span class="card-id old-card-id">{{oldCardId}}</span> to <span class="card-id new-card-id">{{newCardId}}</span></p>
   <button class="btn btn-danger cancel-card-update">No</button>
   <button class="btn btn-primary confirm-card-update">Yes</button>
 </div>
