--- a/pages/card-update/card-update-tmpl.handlebars
+++ b/pages/card-update/card-update-tmpl.handlebars
@@ -5,4 +5,5 @@
   <p>Would you like to change your card id from <span class="card-id old-card-id">{{oldCardId}}</span> to <span class="card-id new-card-id">{{newCardId}}</span></p>
   <button class="btn btn-danger cancel-card-update">No</button>
   <button class="btn btn-primary confirm-card-update">Yes</button>
+  <p>You may update your card id at any time in the <a href="/settings">settings page</a></p>
 </div>
