--- a/pages/card-update/card-update-tmpl.handlebars
+++ b/pages/card-update/card-update-tmpl.handlebars
@@ -2,8 +2,10 @@
 
 <div class="plateau span8 offset1 plateau-page">
   <p>Update your card id.</p>
-  <p>Would you like to change your card id from <span class="card-id old-card-id">{{oldCardId}}</span> to <span class="card-id new-card-id">{{newCardId}}</span></p>
-  <button class="btn btn-danger cancel-card-update">No</button>
-  <button class="btn btn-primary confirm-card-update">Yes</button>
-  <p>You may update your card id at any time in the <a href="/settings">settings page</a></p>
+  <p>Would you like to change your card id from <span class="card-id old-card-id">{{oldCardId}}</span> to <span class="card-id new-card-id">{{newCardId}}</span>?</p>
+  <div class="card-update-button-container">
+    <button class="btn btn-large btn-danger cancel-card-update">No</button>
+    <button class="btn btn-large btn-primary confirm-card-update">Yes</button>
+  </div>
+  <p>You may update your card id at any time in the <a href="/settings">settings page</a>.</p>
 </div>
