--- a/pages/business/business-style.less
+++ b/pages/business/business-style.less
@@ -1,9 +1,12 @@
 @import "/styles/variables.less";
 @import "/styles/mixins.less";
 
-@logoWidth: 242px;
+@logoWidth: 240px;
 
 .page-business .logo-wrapper {
+  display: table;
+  box-sizing: border-box;
+  padding-right: 52px;
   text-align: right;
 }
 
@@ -18,4 +21,33 @@
   margin-top: 22px;
   font-size: 18px;
   text-align: center;
+}
+
+.page-business .business-name {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.page-business .biz-info {
+  margin-top: 26px;
+  margin-bottom: 28px;
+  font-size: 20px;
+}
+
+.page-business .biz-info .biz-info-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.page-business .biz-info-hours-list {
+  margin: 0;
+}
+
+.page-business .biz-info-hours-list dt {
+  font-weight: @font-weight-base;
+}
+
+.page-business .biz-info-hours-list dd {
+  font-weight: normal;
 }
