renamed icomoon to goodybag-icons

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'icomoon';
-  src:url('/fonts/icomoon.eot');
-  src:url('/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-  url('/fonts/icomoon.woff') format('woff'),
-  url('/fonts/icomoon.ttf') format('truetype'),
-  url('/fonts/icomoon.svg#icomoon') format('svg');
+  font-family: 'goodybag-icons';
+  src:url('/fonts/goodybag-icons.eot');
+  src:url('/fonts/goodybag-icons.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/goodybag-icons.woff') format('woff'),
+  url('/fonts/goodybag-icons.ttf') format('truetype'),
+  url('/fonts/goodybag-icons.svg#goodybag-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
-  font-family: 'icomoon';
+  font-family: 'goodybag-icons';
   content: attr(data-icon);
   speak: none;
   font-weight: normal;
@@ -28,7 +28,7 @@ you can use the generic selector below, but it's slower:
 [class*="icon-"] {...}
 */
 .icon {
-  font-family: 'icomoon';
+  font-family: 'goodybag-icons';
   speak: none;
   font-style: normal;
   font-weight: normal;
