added product menus css component

--- a/styles/main.less
+++ b/styles/main.less
@@ -18,6 +18,7 @@
 @import "pages.less";
 @import "icons.less";
 @import "punchcard-stack.less";
+@import "product-menus.less";
 
 html {
   background: url('@{texture-linen}');
@@ -33,6 +34,7 @@ body {
   color:          @text-color;
   background:     url('@{body-gradient}') top center repeat-y;
   min-height:     100%;
+  min-width:      @gridRowWidth;
 }
 
 
