--- a/modals/product-details/pages/details/product-details-page-tmpl.handlebars
+++ b/modals/product-details/pages/details/product-details-page-tmpl.handlebars
@@ -1,6 +1,6 @@
 <section class="product-details">
   <h1>{{product.name}}</h1>
-  <a class="product-business" href="#">@ {{product.businessName}}</a>
+  <a class="product-business" href="/#/businesses/{{product.businessId}}">@ {{product.businessName}}</a>
 
   <div class="stats">
     {{! Likes }}
