--- a/pages/business/business-style.less
+++ b/pages/business/business-style.less
@@ -1,7 +1,9 @@
 @import "/styles/variables.less";
 @import "/styles/mixins.less";
 
-@logoWidth: 240px;
+@info-color: lighten(@text-color, 10%);
+@logo-width: 240px;
+@day-width: 100px;
 
 .page-business .logo-wrapper {
   display: table;
@@ -13,12 +15,12 @@
 .page-business .business-logo {
   border-radius: 8px;
   border: 1px @gray-light solid;
-  width: @logoWidth;
+  width: @logo-width;
 }
 
 .page-business .view-punchcard {
-  width: @logoWidth;
-  margin-top: 22px;
+  width: @logo-width;
+  margin-top: 34px;
   font-size: 18px;
   text-align: center;
 }
@@ -26,28 +28,47 @@
 .page-business .business-name {
   font-size: 28px;
   font-weight: 600;
+  margin-top: -8px;
 }
 
 .page-business .biz-info {
   margin-top: 26px;
   margin-bottom: 28px;
   font-size: 20px;
+  color: @info-color;
 }
 
 .page-business .biz-info .biz-info-title {
   font-size: 18px;
   font-weight: 600;
-  margin-bottom: 0;
+  margin-bottom: 2px;
+  color: @text-color;
 }
 
 .page-business .biz-info-hours-list {
   margin: 0;
 }
 
+.page-business .biz-info-website a {
+  color: @info-color;
+}
+
 .page-business .biz-info-hours-list dt {
+  width: @day-width;
+  float: left;
   font-weight: @font-weight-base;
 }
 
 .page-business .biz-info-hours-list dd {
-  font-weight: normal;
+  display: table;
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-left: @day-width;
+  margin-left: -@day-width;
+  margin-bottom: 2px;
+}
+
+.page-business .product-menu {
+  margin-top: 42px;
 }
