--- a/pages/business/business-tmpl.handlebars
+++ b/pages/business/business-tmpl.handlebars
@@ -6,7 +6,10 @@
       {{! Logo and Punchcard button }}
       <div class="span4 logo-wrapper">
         <img src="{{filepicker business.logoUrl 240 240}}" alt="{{business.name}}" class="business-logo">
+
+        {{#if business.isGB}}
         <button class="btn btn-white view-punchcard">View PunchCard</button>
+        {{/if}}
       </div>
 
       {{! Business info }}
@@ -46,5 +49,50 @@
         </div>
       </div>
     </div>
+
+    {{! Menu }}
+    <section class="product-menu product-menu-table">
+      {{#each categories}}
+      <section class="product-menu-section">
+        <h1 class="product-menu-section-title">{{this.name}}</h1>
+
+        {{! Section Products }}
+        <div class="products-list">
+          {{#each this.products}}
+          <div class="row">
+            <div class="span10 product-item" id="product-list-item-{{this.id}}" data-id="{{this.id}}">
+              <div class="row">
+                <div class="span1 product-photo-wrapper">
+                  {{#if this.photoUrl}}
+                  <img class="product-photo" src="{{filepicker this.photoUrl 66 66}}" alt="{{this.name}}">
+                  {{else}}
+                  <div class="product-photo"></div>
+                  {{/if}}
+                </div>
+                <div class="span7 product-info-wrapper">
+                  <h4 class="product-name">{{this.name}}</h4>
+                  <p class="product-description">{{this.description}}</p>
+                </div>
+                <div class="span1 product-feelings-wrapper">
+                  <div class="product-feeling product-feeling-likes">
+                    <i class="icon-heart"></i>
+                    <span class="product-menu-like-count">{{this.likes}}</span>
+                  </div>
+                </div>
+                <div class="span1 product-price-wrapper">
+                {{#if this.price}}
+                  ${{money this.price}}
+                {{else}}
+                  N/A
+                {{/if}}
+                </div>
+              </div>
+            </div>
+          </div>
+          {{/each}}
+        </div>
+      </section>
+      {{/each}}
+    </section>
   </div>
 </div>
