--- a/pages/business/business-style.less
+++ b/pages/business/business-style.less
@@ -5,6 +5,10 @@
 @logo-width: 240px;
 @day-width: 100px;
 
+.page-business .page-plateau.plateau {
+  padding-bottom: 0;
+}
+
 .page-business .logo-wrapper {
   display: table;
   box-sizing: border-box;
