logic for switching out back button with cancel and save buttons for add to collection

--- a/modals/product-details/pages/add-to-collections/add-to-collections-tmpl.handlebars
+++ b/modals/product-details/pages/add-to-collections/add-to-collections-tmpl.handlebars
@@ -1,4 +1,6 @@
 <div class="add-to-collections"></div>
 <div class="page-actions">
   <button class="btn btn-large btn-back">Back</button>
+  <button class="btn btn-large btn-cancel hide">Cancel</button>
+  <button class="btn btn-large btn-save btn-primary hide">Save</button>
 </div>
