added logic for removing collections

--- a/modals/edit-collection/edit-collection-tmpl.handlebars
+++ b/modals/edit-collection/edit-collection-tmpl.handlebars
@@ -11,7 +11,15 @@
   <div class="control-group">
     <div class="controls">
       <button class="btn btn-large btn-cancel" type="button">Cancel</button>
-      <button class="btn btn-large">Save</button>
+      <button class="btn btn-large btn-primary">Save</button>
+    </div>
+  </div>
+
+  <div class="control-group danger-zone">
+    <div class="controls">
+      <h4>Danger Zone</h4>
+      <p>Performing this action is non-reversable.<br />Continue at your own risk!</p>
+      <button class="btn btn-delete btn-danger" type="button">Delete Collection</button>
     </div>
   </div>
 </form>
