--- a/modals/edit-collection/edit-collection-style.less
+++ b/modals/edit-collection/edit-collection-style.less
@@ -1,13 +1,6 @@
 @import "/styles/variables.less";
 @import "/styles/mixins.less";
 
-.add-new-collection-modal {
+.edit-collection-modal .danger-zone {
   margin-top: 80px;
-}
-
-.add-new-collection-modal h1 {
-  font-size: 32px;
-  font-weight: 500;
-  text-align: center;
-  margin-bottom: 45px;
 }
