fixed title margin

--- a/styles/product-menus.less
+++ b/styles/product-menus.less
@@ -5,6 +5,7 @@
 @product-photo-size: 66px;
 
 .product-menu .product-menu-section-title {
+  margin-top: 0;
   margin-bottom: 0;
   font-size: 15px;
   font-weight: 600;
