added message when there are no search results returned

--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -42,4 +42,6 @@
 
 <ul class="products-list"></ul>
 
+<h2 class="hide no-results">No products matched your search :(</h2>
+
 <div class="products-list-spinner"></div>
