added correct url

--- a/components/products-list/products-list-item-tmpl.handlebars
+++ b/components/products-list/products-list-item-tmpl.handlebars
@@ -3,7 +3,7 @@
   {{! Header }}
   <div class="header">
     <h4 class="product-name">{{product.name}}</h4>
-    <a class="business-name" href="#">@ {{product.businessName}}</a>
+    <a class="business-name" href="/#/businesses/{{product.businessId}}">@ {{product.businessName}}</a>
   </div>
 
   {{! Photo }}
