make modal close handle on top

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -150,6 +150,7 @@
 // Used for a bird's eye view of components dependent on the z-axis
 // Try to avoid customizing these :)
 @zindexAppBanner:            5;
+@zindexModalClose:          10;
 @zindexDropdown:          1000;
 @zindexPopover:           1010;
 @zindexTooltip:           1030;
