make modal pages overflow: auto, use max-heights, and tailor heights for each page

--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -11,8 +11,16 @@
 }
 
 .product-details-modal .pages > .page {
-  height: @product-photo-height - 50px;
-  overflow: scroll;
+  max-height: @product-photo-height - 50px;
+  overflow: auto;
+}
+
+.product-details-modal .page.page-product-details {
+  max-height: @product-photo-height - 130px;
+}
+
+.product-details-modal .page.page-add-to-collections {
+  max-height: @product-photo-height - 50px;
 }
 
 .product-details-modal .page-actions {
