sprite icon added. positioning not right

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -40,7 +40,8 @@
             <li>
               <a href="#/support">Support</a>
             </li>
-            <li class="get-the-app">
+            <li>
+              <i class="icon-iphone-app"></i>
               <a href="https://itunes.apple.com/ie/app/goodybag/id506924389?mt=8">Get the App!</a>
             </li>
           </ul>
