--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -747,6 +747,8 @@
   .punch-indicator()          { background-position:  -13px -288px; width: 21px; height: 21px; }
   .punched-indicator()        { background-position:  -52px -288px; width: 21px; height: 21px; }
   .elite-punched-indicator()  { background-position:  -93px -288px; width: 21px; height: 21px; }
+  .iphone-app()               { background-position: -410px   -8px; width: 14px; height: 28px; }
+
 }
 
 .sprite() {
