--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -156,6 +156,7 @@
 .icon-green-plus                  { #sprite > .green-plus() }
 .icon-green-plus-large            { #sprite > .green-plus-large() }
 .icon-green-plus-huge             { #sprite > .green-plus-huge() }
+.icon-iphone-app                  { #sprite > .iphone-app() }
 
 .punch-indicator                  { #sprite > .punch-indicator() }
 .elite-punch-indicator.punched    { #sprite > .elite-punched-indicator() }
