app icon positioned properly

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -40,9 +40,8 @@
             <li>
               <a href="#/support">Support</a>
             </li>
-            <li>
-              <i class="icon-iphone-app"></i>
-              <a href="https://itunes.apple.com/ie/app/goodybag/id506924389?mt=8">Get the App!</a>
+            <li class="get-the-app">
+              <a href="https://itunes.apple.com/ie/app/goodybag/id506924389?mt=8"><i class="icon-iphone-app"></i>Get the App!</a>
             </li>
           </ul>
         </li>
