--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -143,6 +143,16 @@
   width: 210px;
 }
 
+li.get-the-app {
+  position: relative;
+}
+
+li.get-the-app .icon-iphone-app {
+  position: absolute;
+  top:6px;
+  left:30px;
+}
+
 .header-navbar .badge-wrapper {
   overflow: hidden;
   // In order to compensate for the extra margin the badge
