make explore and my collections links active when switching to respective pages

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -7,10 +7,10 @@
 
     <div class="span6 nav-wrapper">
       <ul class="nav">
-        <li>
+        <li id="explore-link">
           <a href="#/explore">Explore</a>
         </li>
-        <li>
+        <li id="collections-link">
           <a href="#/collections">My Collections</a>
         </li>
         <li class="dropdown dropdown-more">
