--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -34,6 +34,9 @@
   padding: 50px 0;
   border-radius: 8px;
   box-shadow: 0 0 6px rgba(0,0,0, 0.33);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .plateau-page {
