--- a/pages/about-us/about-us-tmpl.handlebars
+++ b/pages/about-us/about-us-tmpl.handlebars
@@ -1,12 +1,16 @@
-<h1 class="page-title">About Us</h1>
+<div class="row">
+  <h1 class="page-title">About Us</h1>
+</div>
 
-<div class="plateau span8 offset1 plateau-page">
-  <div class="video-container">
-    <iframe class="gb-video" width="584" height="385" src="http://www.youtube.com/embed/WIFJIgztPyU?hd=1" frameborder="0" allowfullscreen=""></iframe>
-    <img src="img/bg-video-block.jpg" class="video-bg">
+<div class="row">
+  <div class="plateau span8 offset1 plateau-page">
+    <div class="video-container">
+      <iframe class="gb-video" width="584" height="385" src="http://www.youtube.com/embed/WIFJIgztPyU?hd=1" frameborder="0" allowfullscreen=""></iframe>
+      <img src="img/bg-video-block.jpg" class="video-bg">
+    </div>
+
+    <p>Goodybag is a local startup based in Austin, TX.</p>
+    <p>From businesses and consumers to charities, our vision is to help support our community and see it thrive!</p>
+    <p>Check out the <a href="/#/how-it-works">How it Works</a> page to learn more about our products!</p>
   </div>
-
-  <p>Goodybag is a local startup based in Austin, TX.</p>
-  <p>From businesses and consumers to charities, our vision is to help support our community and see it thrive!</p>
-  <p>Check out the <a href="/#/how-it-works">How it Works</a> page to learn more about our products!</p>
 </div>
