--- a/pages/404/404-tmpl.handlebars
+++ b/pages/404/404-tmpl.handlebars
@@ -1,4 +1,7 @@
-<h1 class="page-title">Page Not Found</h1>
+<div class="row">
+  <h1 class="page-title">Page Not Found</h1>
+</div>
+
 
 <div class="row">
   <div class="plateau span8 offset1 plateau-page">
