--- a/pages/how-it-works/how-it-works-tmpl.handlebars
+++ b/pages/how-it-works/how-it-works-tmpl.handlebars
@@ -1,4 +1,6 @@
-<h1 class="page-title">How It Works</h1>
+<div class="row">
+  <h1 class="page-title">How It Works</h1>
+</div>
 
 <div class="row">
   <div class="span8 offset1">
