--- a/pages/gb-for-businesses/gb-for-businesses-tmpl.handlebars
+++ b/pages/gb-for-businesses/gb-for-businesses-tmpl.handlebars
@@ -1,4 +1,6 @@
-<h1 class="page-title">Goodybag for Businesses</h1>
+<div class="row">
+  <h1 class="page-title">Goodybag for Businesses</h1>
+</div>
 
 <div class="row">
   <div class="span8 offset1">
