added spans to elements inside rows in support

--- a/pages/support/support-tmpl.handlebars
+++ b/pages/support/support-tmpl.handlebars
@@ -1,9 +1,9 @@
 <div class="row">
-  <h1 class="page-title">Support</h1>
+  <h1 class="span10 page-title">Support</h1>
 </div>
 
 <div class="row">
-  <p>For help, please send us an email at <a href="mailto:support@goodybag.com">support@goodybag.com</a></p>
+  <p class="span10">For help, please send us an email at <a href="mailto:support@goodybag.com">support@goodybag.com</a></p>
 </div>
 
 <div class="row">
