--- a/pages/404/404-tmpl.handlebars
+++ b/pages/404/404-tmpl.handlebars
@@ -3,7 +3,7 @@
 </div>
 
 
-<div class="row">
+<div class="row not-found-content">
   <div class="plateau span8 offset1 plateau-page">
     <p>We could not find the page your were looking for.</p>
     <p>Check the url, and if you clicked one of our links to get here, please <a href="mailto:support@goodybag.com">contact support</a>.</p>
