testing spinner on img load

--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -34,6 +34,10 @@
   box-shadow: 0 2px 5px rgba(25,24,25, 0.2);
 }
 
+.product-details-modal .product-photo-hidden {
+  display: none;
+}
+
 .product-details-modal .product-details {
   font-size: 18px;
   font-weight: 300;
