Fixed and refactored image loading icon

--- a/modals/product-details/product-details-tmpl.handlebars
+++ b/modals/product-details/product-details-tmpl.handlebars
@@ -6,7 +6,7 @@
     {{! Photo Viewer }}
     <div class="product-photo-viewer" style="text-align: center">
       {{! For now, just put a photo in }}
-      <div class="product-photo product-photo-loader">a</div>
+      <div class="product-photo product-photo-spinner"></div>
       <img src="{{filepicker product.photoUrl 430 430}}" alt="" class="product-photo product-photo-hidden">
     </div>
   </div>
