--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -34,6 +34,17 @@
   box-shadow: 0 2px 5px rgba(25,24,25, 0.2);
 }
 
+.product-details-modal .product-photo-viewer {
+  height: 433px;
+  position: relative;
+}
+
+.product-details-modal .product-photo-spinner {
+  position: relative;
+  left: 50%;
+  top:  50%;
+}
+
 .product-details-modal .product-photo-hidden {
   display: none;
 }
