added 0.5s transition delay to :hover effects.

--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -169,10 +169,12 @@
 
 .product-list-item:hover .header {
   top: 0 !important;
+  transition-delay: 0.5s;
 }
 
 .product-list-item:hover .product-feelings {
   bottom: 0 !important;
+  transition-delay: 0.5s;
 }
 
 .product-list-item .product-feelings {
