added safari prefixed transition-delay

--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -170,11 +170,13 @@
 .product-list-item:hover .header {
   top: 0 !important;
   transition-delay: 0.5s;
+  -webkit-transition-delay: 2s; /* Safari */
 }
 
 .product-list-item:hover .product-feelings {
   bottom: 0 !important;
   transition-delay: 0.5s;
+  -webkit-transition-delay: 2s; /* Safari */
 }
 
 .product-list-item .product-feelings {
