switched to using mixin

--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -169,14 +169,12 @@
 
 .product-list-item:hover .header {
   top: 0 !important;
-  -webkit-transition-delay: 0.1s; /* Safari */
-  transition-delay: 0.1s;
+  .transition-delay(0.1s);
 }
 
 .product-list-item:hover .product-feelings {
   bottom: 0 !important;
-  -webkit-transition-delay: 0.1s; /* Safari */
-  transition-delay: 0.1s;
+  .transition-delay(0.1s);
 }
 
 .product-list-item .product-feelings {
