include address in search if only 1 location

--- a/modals/location-details/location-details-tmpl.handlebars
+++ b/modals/location-details/location-details-tmpl.handlebars
@@ -7,7 +7,7 @@
 
   {{#if business.url}}<a class="business-website" href="{{business.url}}">{{business.url}}</a>{{/if}}
 
-  <iframe width="100%" height="400" class="locations-map expanded" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q={{uri business.name}},+Austin,+TX&amp;aq=0&amp;oq={{uri business.name}}&amp;ie=UTF8&amp;hq={{uri business.name}},&amp;hnear=Austin,+Travis,+Texas&amp;t=m&amp;spn=0.224672,0.117598&amp;output=embed"></iframe>
+  <iframe width="100%" height="400" class="locations-map expanded" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q={{uri business.mapSearch}},+Austin,+TX&amp;aq=0&amp;oq={{uri business.mapSearch}}&amp;ie=UTF8&amp;hq={{uri business.name}},&amp;hnear=Austin,+Travis,+Texas&amp;t=m&amp;spn=0.224672,0.117598&amp;output=embed"></iframe>
 
 
 
