Added style for search remove btn

--- a/pages/explore/explore-tmpl.handlebars
+++ b/pages/explore/explore-tmpl.handlebars
@@ -6,7 +6,8 @@
     <div class="span2 search-wrapper">
       {{! Wrap input in form to use onSubmit event }}
       <form id="explore-search-form">
-        <input class="span2 field-search" placeholder="Search Gallery" type="text">
+        <input class="field-search" placeholder="Search Gallery" type="text">
+        <button><i class="icon-remove"></i></button>
       </form>
     </div>
 
