--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -157,6 +157,7 @@
 .icon-green-plus-large            { #sprite > .green-plus-large() }
 .icon-green-plus-huge             { #sprite > .green-plus-huge() }
 .icon-iphone-app                  { #sprite > .iphone-app() }
+.icon-remove                      { #sprite > .modal-close() }
 
 .punch-indicator                  { #sprite > .punch-indicator() }
 .elite-punch-indicator.punched    { #sprite > .elite-punched-indicator() }
