--- a/styles/forms.less
+++ b/styles/forms.less
@@ -116,6 +116,7 @@ input[type="url"],
 input[type="search"],
 input[type="tel"],
 input[type="color"],
+.bow-shadow-input,
 .uneditable-input {
   background-color: @inputBackground;
   border: 1px solid @inputBorder;
