Added search remove functionality

--- a/pages/explore/explore-style.less
+++ b/pages/explore/explore-style.less
@@ -33,5 +33,6 @@ header.page-header-box.stuck {
   button {
     border:               none;
     background:           none;
+    display:              none;
   }
 }
