--- a/pages/explore/explore-tmpl.handlebars
+++ b/pages/explore/explore-tmpl.handlebars
@@ -7,7 +7,7 @@
       {{! Wrap input in form to use onSubmit event }}
       <form id="explore-search-form">
         <input class="field-search" placeholder="Search Gallery" type="text">
-        <button><i class="icon-remove"></i></button>
+        <button class="field-search-remove"><i class="icon-remove"></i></button>
       </form>
     </div>
 
