Fixed typo on input style

--- a/pages/explore/explore-style.less
+++ b/pages/explore/explore-style.less
@@ -19,7 +19,7 @@ header.page-header-box.stuck {
   height:         35px;
   margin-top:     4px;
   padding-top:    1px;
-  .bow-shadow-input;
+  .box-shadow-input;
   .border-radius(@inputBorderRadius);
 
   input {
