add generic padding-class, fix all page-title grid problems, make plateau padding an element inside of any grid spans

--- a/pages/how-it-works/how-it-works-style.less
+++ b/pages/how-it-works/how-it-works-style.less
@@ -12,11 +12,10 @@
 
 .plateau-tablet .section-left .img-wrapper {
   text-align: right;
-  margin-right: -20px;
 }
 
-.plateau-tablet .section-right .img-wrapper {
-  margin-left: -20px;
+.plateau-tablet .section-left .padding-wrap {
+  padding-right: 0;
 }
 
 .plateau-mobile .img-wrapper {
