--- a/pages/settings/settings-tmpl.handlebars
+++ b/pages/settings/settings-tmpl.handlebars
@@ -1,6 +1,4 @@
-<div class="row">
-  <h1 class="page-title span10">Settings</h1>
-</div>
+  <h1 class="page-title">Settings</h1>
 
 <div class="row">
   <div class="plateau span8 offset1">
