--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -41,7 +41,7 @@
 */
 }
 
-.plateau-page {
+.padding-wrap {
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -49,15 +49,6 @@
 .plateau-page + .plateau-page {
   margin-top: 80px;
 }
-
-// Account for extra padding I guess
-.span4 > .plateau-page,
-.span5 > .plateau-page,
-.span6 > .plateau-page,
-.span7 > .plateau-page,
-.span8 > .plateau-page,
-.span9 > .plateau-page,
-.span10 > .plateau-page { margin-left: -20px; }
 
 .fancy-separator {
   text-align: center;
