--- a/pages/404/404-tmpl.handlebars
+++ b/pages/404/404-tmpl.handlebars
@@ -1,11 +1,11 @@
-<div class="row">
-  <h1 class="page-title">Page Not Found</h1>
-</div>
+<h1 class="page-title">Page Not Found</h1>
 
 
 <div class="row not-found-content">
   <div class="plateau span8 offset1 plateau-page">
-    <p>We could not find the page your were looking for.</p>
-    <p>Check the url, and if you clicked one of our links to get here, please <a href="mailto:support@goodybag.com">contact support</a>.</p>
+    <div class="padding-wrap">
+      <p>We could not find the page your were looking for.</p>
+      <p>Check the url, and if you clicked one of our links to get here, please <a href="mailto:support@goodybag.com">contact support</a>.</p>
+    </div>
   </div>
 </div>
