--- a/pages/how-it-works/how-it-works-tmpl.handlebars
+++ b/pages/how-it-works/how-it-works-tmpl.handlebars
@@ -1,21 +1,23 @@
-<div class="row">
-  <h1 class="page-title">How It Works</h1>
-</div>
+<h1 class="page-title">How It Works</h1>
 
 <div class="row">
   <div class="span8 offset1">
     <section class="plateau plateau-page plateau-tablet">
 
-      <h1 class="primary-title">In Store Tablet</h1>
+      <div class="padding-wrap">
+        <h1 class="primary-title">In Store Tablet</h1>
+      </div>
 
       <section class="row section-left how-it-works-section">
         <div class="span4 content-wrapper">
-          <h1 class="section-title">Let Goodybag help decide your next meal!</h1>
-          <ul>
-            <li>View pictures of every item</li>
-            <li>See what's popular</li>
-            <li>Like food and products that interest you</li>
-          </ul>
+          <div class="padding-wrap">
+            <h1 class="section-title">Let Goodybag help decide your next meal!</h1>
+            <ul>
+              <li>View pictures of every item</li>
+              <li>See what's popular</li>
+              <li>Like food and products that interest you</li>
+            </ul>
+          </div>
         </div>
         <div class="span4">
           <div class="img-wrapper">
@@ -45,7 +47,9 @@
 
     <section class="plateau plateau-page plateau-mobile">
 
-      <h1 class="primary-title">Mobile App</h1>
+      <div class="padding-wrap">
+        <h1 class="primary-title">Mobile App</h1>
+      </div>
 
       <section class="row section-right how-it-works-section section-mobile-1">
         <div class="span4 content-wrapper">
