added fade and none transitions

--- a/styles/main.less
+++ b/styles/main.less
@@ -19,6 +19,7 @@
 @import "icons.less";
 @import "punchcard-stack.less";
 @import "product-menus.less";
+@import "page-transitions.less";
 
 html {
   background: url('@{texture-linen}');
