fix closing tag, ensure target is the correct element

--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -17,15 +17,15 @@
       <button class="btn btn-primary search-form-btn">Search</button>
 
       <div class="btn-group filters-btn-group">
-        <button class="btn btn-large btn-want"
+        <button class="btn btn-large btn-want">
           <i class="icon"></i>
           Want <span class="count">({{collection.totalMyWants}})</span>
         </button>
-        <button class="btn btn-large btn-like"
+        <button class="btn btn-large btn-like">
           <i class="icon"></i>
           Like <span class="count">({{collection.totalMyLikes}})</span>
         </button>
-        <button class="btn btn-large btn-tried"
+        <button class="btn btn-large btn-tried">
           <i class="icon"></i>
           Tried <span class="count">({{collection.totalMyTries}})</span>
         </button>
