--- a/pages/locations/locations-tmpl.handlebars
+++ b/pages/locations/locations-tmpl.handlebars
@@ -16,7 +16,7 @@
       {{! Business Request }}
       <form action="#" class="column column-2 businesses-request">
         <div class="control-group">
-          <label for="business-search" class="control-label">Request a business to join Goodybag:</label>
+          <label for="business-request" class="control-label">Request a business to join Goodybag:</label>
           <input type="text" class="" id="business-request" placeholder="Enter a business name">
           <button class="btn btn-primary">Request</button>
         </div>
