Fixed missing button type attr

--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -7,7 +7,7 @@
       {{! Wrap input in form to use onSubmit event }}
       <form id="explore-search-form">
         <input class="field-search" placeholder="Search Gallery" type="text">
-        <button class="field-search-clear"><i class="icon-remove"></i></button>
+        <button class="field-search-clear" type="button"><i class="icon-remove"></i></button>
       </form>
     </div>
 
