changed block format

--- a/pages/business/business-tmpl.handlebars
+++ b/pages/business/business-tmpl.handlebars
@@ -28,7 +28,7 @@
         {{! Phone }}
         <div class="biz-info biz-info-phone">
           <h4 class="biz-info-title">Phone</h4>
-          {{#phone location.phone}}{{/phone}}
+          {{phone location.phone}}
         </div>
 
         {{! Website }}
