got rid of vestigal icon tags and moved parens outside span where they belong

--- a/pages/explore-collection/explore-collection-tmpl.handlebars
+++ b/pages/explore-collection/explore-collection-tmpl.handlebars
@@ -18,16 +18,13 @@
 
       <div class="btn-group filters-btn-group">
         <button class="btn btn-large btn-want">
-          <i class="icon"></i>
-          Want <span class="count">({{collection.totalMyWants}})</span>
+          Want (<span class="count">{{collection.totalMyWants}}</span>)
         </button>
         <button class="btn btn-large btn-like">
-          <i class="icon"></i>
-          Like <span class="count">({{collection.totalMyLikes}})</span>
+          Like (<span class="count">{{collection.totalMyLikes}}</span>)
         </button>
         <button class="btn btn-large btn-tried">
-          <i class="icon"></i>
-          Tried <span class="count">({{collection.totalMyTries}})</span>
+          Tried (<span class="count">{{collection.totalMyTries}}</span>)
         </button>
       </div>
     </div>
